# yaml-front-matter-to-bib

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci_test.yml  codecov.yaml
src/: cli.rs  fields.rs  file_handling.rs  front_matter_styles.rs  front_matter_types.rs  main.rs  process_metadata.rs
src/cli/: cli.rs
src/front_matter_styles/: article_bio_like.rs
src/front_matter_types/: article_bio_like.rs
tests/: integration_tests.rs  test_md.md  test_ref.bib
tests/data/: test_bib.bib  test_md_1.md  test_md_2.md
