[package]
name = "yaml_head_to_bib"
version = "0.1.0"
edition = "2021"
authors = ["Andre Macedo <andre.lopes.macedo@gmail.com>"]
readme = "https://github.com/AndreMacedo88/yaml-front-matter-to-bib/blob/main/README.md"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = "1.0.192"
walkdir = "2.4.0"
yaml-front-matter = "0.1.0"
